src/test/deca/syntax/valid/provided/PrintMultiExpr.deca
// DESCRIPTION : Print de plusieurs expressions
// Résultat : :) ;) :D
{
    print("(ツ) ", "(ツ) ", "(ツ)");
}
