src/test/deca/syntax/invalid/provided/PrintMultiLineString.deca
// DESCRIPTION: Print de plusieurs lignes
{
  print("(ツ)
  (ツ)
  (ツ)");
}
